[gd_scene load_steps=2 format=3 uid="uid://gameover123456"]

[ext_resource type="Script" path="res://scripts/ui/game_over_screen.gd" id="1_gameover"]

[node name="GameOverScreen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gameover")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GAME OVER"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Victory Message"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="StatsLabel" type="RichTextLabel" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Statistics will appear here"
fit_content = true
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2

[node name="ButtonsHBox" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox/PlayAgainButton" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBox/ButtonsHBox/QuitButton" to="." method="_on_quit_pressed"]
